# rz-bindgen

./: auditwheel_whitelisted.py  meson.build  meson_options.txt  pylintrc  pyproject.toml
.github/workflows/: bindgen.yml  ci.yml  lint.yml  pages.yml
src/: binding_director.py  bindings.py  main.py  module.py  module_class.py  module_func.py  module_generic.py
src/clang/: wrapper.pyi
